fix OSX makefile

--- a/uni10/Makefile.config
+++ b/uni10/Makefile.config
@@ -8,7 +8,7 @@
 CPU_ONLY := 1
 
 # uncomment to disable IO dependencies and corresponding data layers
-# USE_OPENCV := 0
+USE_OPENCV := 0
 # USE_LEVELDB := 0
 # USE_LMDB := 0
 
@@ -43,12 +43,13 @@ CPU_ONLY := 1
 # atlas for ATLAS (default)
 # mkl for MKL
 # open for OpenBlas
-BLAS := atlas
+BLAS := mkl
 # Custom (MKL/ATLAS/OpenBLAS) include and lib directories.
 # Leave commented to accept the defaults for your choice of BLAS
 # (which should work)!
 # BLAS_INCLUDE := /path/to/your/blas
-BLAS_LIB := /usr/lib64/atlas
+# BLAS_LIB := /usr/lib64/atlas
+BLAS_LIB := $(MKLROOT)/lib
 
 # Homebrew puts openblas in a directory that is not on the standard search path
 # BLAS_INCLUDE := $(shell brew --prefix openblas)/include
