--- a/uni10/Makefile
+++ b/uni10/Makefile
@@ -60,16 +60,8 @@ GTEST_SRC := gtest
 
 
 # handle IO dependencies
-USE_LEVELDB ?= 1
-USE_LMDB ?= 1
 USE_OPENCV ?= 1
 
-ifeq ($(USE_LEVELDB), 1)
-	LIBRARIES += leveldb snappy
-endif
-ifeq ($(USE_LMDB), 1)
-	LIBRARIES += lmdb
-endif
 ifeq ($(USE_OPENCV), 1)
 	LIBRARIES += opencv_core opencv_highgui opencv_imgproc 
 
@@ -113,7 +105,8 @@ ifeq ($(CPU_ONLY), 1)
 endif
 
 
-LIBRARIES += glog gflags protobuf boost_system boost_filesystem m hdf5_hl hdf5
+LIBRARIES += boost_system boost_filesystem m hdf5_hl hdf5
+# glog gflags protobuf
 
 ##############################
 # Set build directories
