--- a/uni10/Makefile.config
+++ b/uni10/Makefile.config
@@ -51,6 +51,19 @@ BLAS := mkl
 # BLAS_LIB := /usr/lib64/atlas
 BLAS_LIB := $(MKLROOT)/lib
 
+# ARMADILLO option:
+# USE_ARMADILLO :=
+# ARMADILLO_INCLUDE :=
+# ARMADILLO_LIB :=
+#
+# CUDA option
+# CUDA_INCLUDE :=
+# CUDA_LIB :=
+#
+# MAGMA option
+# MAGMA_INCLUDE :=
+# MAGMA_LIB :=
+
 # Homebrew puts openblas in a directory that is not on the standard search path
 # BLAS_INCLUDE := $(shell brew --prefix openblas)/include
 # BLAS_LIB := $(shell brew --prefix openblas)/lib
