resize OKgit add --all ../test/. But struggle in dot, operator+, operator-, and operator=

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,6 +6,9 @@ CC := icpc
 FLAGS:=-O3 -m64 -std=c++11 -DCPU -DLAPACK
 OBJ := $(LIB)/libuni10.a
 
+resize.e: resize.cpp
+	$(CC) -I$(INC) -L$(LIB) $(FLAGS) -o $@ $< $(OBJ) -mkl=parallel
+
 svd.e: svd.cpp
 	$(CC) -I$(INC) -L$(LIB) $(FLAGS) -o $@ $< $(OBJ) -mkl=parallel
 
