--- a/uni10/Makefile.config
+++ b/uni10/Makefile.config
@@ -6,7 +6,7 @@
 
 # CPU-only switch (uncomment to build without GPU support).
 CPU_ONLY := 1
-
+USE_BOOST := 0
 # uncomment to disable IO dependencies and corresponding data layers
 USE_OPENCV := 0
 # USE_LEVELDB := 0
