fix warnning on Mac OSX

--- a/uni10/Makefile
+++ b/uni10/Makefile
@@ -168,6 +168,7 @@ endif
 # Linux
 ifeq ($(LINUX), 1)
 	CXX ?= /usr/bin/g++
+	COMMON_FLAGS += -DLINUX
 	GCCVERSION := $(shell $(CXX) -dumpversion | cut -f1,2 -d.)
 	# older versions of gcc are too dumb to build boost with -Wuninitalized
 	ifeq ($(shell echo | awk '{exit $(GCCVERSION) < 4.6;}'), 1)
@@ -186,7 +187,7 @@ ifeq ($(OSX), 1)
 	ifneq ($(VNUM), 1)
 		CUDA_VERSION := $(shell $(CUDA_DIR)/bin/nvcc -V | grep -o 'release \d' | grep -o '\d')
 		ifeq ($(shell echo | awk '{exit $(CUDA_VERSION) < 7.0;}'), 1)
-			CXXFLAGS += -stdlib=libstdc++
+			CXXFLAGS += -stdlib=libstdc++ -DOSX
 			LINKFLAGS += -stdlib=libstdc++
 		endif
 		# clang throws this warning for cuda headers
