IDENTITY, ORTHORAND AND TRACE OK

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,10 +1,13 @@
-TUNI10_ROOT := /home/Yun-Hsuan/GitRepo/Templates_uni10/uni10/build
+#TUNI10_ROOT := /home/Yun-Hsuan/GitRepo/Templates_uni10/uni10/build
 #UNI10_ROOT := /Users/yunda/myLibrary/uni10
 INC := $(TUNI10_ROOT)/include
 LIB := $(TUNI10_ROOT)/lib
 CC := icpc
 FLAGS:=-O3 -m64 -std=c++11 -DCPU -DLAPACK
 OBJ := $(LIB)/libuni10.a
+
+add.e: add.cpp
+	$(CC) -I$(INC) -L$(LIB) $(FLAGS) -o $@ $< $(OBJ) -mkl=parallel
 
 eigh.e: eigh.cpp
 	$(CC) -I$(INC) -L$(LIB) $(FLAGS) -o $@ $< $(OBJ) -mkl=parallel
@@ -16,9 +19,6 @@ dots.e: dots.cpp
 	$(CC) -I$(INC) -L$(LIB) $(FLAGS) -o $@ $< $(OBJ) -mkl=parallel
 
 copy_constructor.e: copy_constructor.cpp
-	$(CC) -I$(INC) -L$(LIB) $(FLAGS) -o $@ $< $(OBJ) -mkl=parallel
-
-add.e: add.cpp
 	$(CC) -I$(INC) -L$(LIB) $(FLAGS) -o $@ $< $(OBJ) -mkl=parallel
 
 qr.e: qr_family.cpp
