Double free in the copy constructor of the class UniTenosr. Permute OK, contrat and otimes testing

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,6 +4,9 @@ CC := icpc
 FLAGS:=-O3 -m64 -std=c++11 -DCPU -DLAPACK
 OBJ := $(LIB)/libuni10.a
 
+mute.e: permute.cpp
+	$(CC) -I$(INC) -L$(LIB) $(FLAGS) -o $@ $< $(OBJ) -mkl=parallel
+
 ten.e: tensor.cpp
 	$(CC) -I$(INC) -L$(LIB) $(FLAGS) -o $@ $< $(OBJ) -mkl=parallel
 
